--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	<div class="hero" data-style="landing">
 		<div class="container">
 			<div class="inner">
-				<h1 class="c_white">elektriker-Sautter!</h1>
+				<h1 class="c_white">Elektriker-Sautter!</h1>
 								<p class="c_white">Zuverlässig, schnell und unkompliziert buchen!</p>
 							</div>
 		</div>
