--- a/index.html
+++ b/index.html
@@ -272,16 +272,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     </g>
 </svg><span>XXX</span></a>
 		</div>
-		<div class="mobile_nav">
-			<div class="hamburger_cont">
-				<span>Menu</span>
-				<div class="hamburger">
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-				</div>
-			</div>
-		</div>
+		
 	</div>
 </div>
 <div class="c_gradient_primary">
@@ -774,7 +765,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 						<div class="grid">
 						<div class="item ">
 								<div class="img_holder img_holder_mobile">
-					<img src="./Ihr Elektriker im Grossraum Zürich – Digital buchen und profitieren_files/Karte_Region1-2.webp" alt="">
+					
 				</div>
 								<div class="img_holder">
 					<img src="./Ihr Elektriker im Grossraum Zürich – Digital buchen und profitieren_files/Karte_Region-e1657099098808.png" alt="">
@@ -793,12 +784,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="lower">
 					<h6>Ihr Elektriker seit 1967</h6>
-					<p>Bereits 1967 wurde Elektro-Hess in Friedberg (Hessen)gegründet. Unter dem Brand myelektriker.ch schreitet das Team W. Hess Elektro AG Richtung Zukunft.</p>
+					<p>Bereits 1967 wurde elektriker-Sautter in Friedberg (Hessen)gegründet. Unter dem Brand  schreitet das Team Elektriker Sautter Richtung Zukunft.</p>
 				</div>
 			</div>
 						<div class="item mobile_img_holder_no_m">
 								<div class="img_holder img_holder_mobile">
-					<img src="./Ihr Elektriker im Grossraum Zürich – Digital buchen und profitieren_files/009-1.webp" alt="">
+					
 				</div>
 								<div class="img_holder">
 					<img src="./Ihr Elektriker im Grossraum Zürich – Digital buchen und profitieren_files/10-1.webp" alt="">
